<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <!--Perfil-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_weight="2"
        android:orientation="horizontal"

        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_weight="2"
            android:orientation="vertical"

            android:layout_margin="20dp">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="20dp"
                android:src="@drawable/perfil">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bag"
                android:gravity="center"
                android:textSize="20dp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="center"
                android:id="@+id/idBag"
                android:textSize="20dp">

            </TextView>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_weight="2"
            android:orientation="vertical"

            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameLastname"
                android:gravity="center">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_weight="2"
                android:orientation="vertical"

                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:gravity="center">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_weight="2"
                    android:orientation="vertical"

                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/accountNumber"
                        android:gravity="center">

                    </TextView>

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>




    </LinearLayout>
    <!--Fin Perfil-->

    <!--Cuenta-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_weight="2"
        android:orientation="horizontal"


        android:layout_margin="25dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:text="@string/send"
            android:id="@+id/BtnSend">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:text="@string/withdraw"
            android:id="@+id/BtnWithdraw">

        </Button>

        <!--
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

        </Button>
        -->


    </LinearLayout>
    <!--Fin Cuenta-->

    <!--Cuenta-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_weight="1"
        android:orientation="vertical"


        android:layout_margin="25dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/close"
            android:id="@+id/BtnClose">

        </Button>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/soporte"
            android:id="@+id/BtnSuport">

        </Button>
    </LinearLayout>
    <!--Fin Cuenta-->

</LinearLayout>